Batch image processing

--- a/Batch_Image_Processing.ipynb
+++ b/Batch_Image_Processing.ipynb
@@ -1,6 +1,115 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import cv2\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "from glob import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def apply_gamma_correction(img, gamma=2.2):\n",
+    "    inv_gamma = 1.0 / gamma\n",
+    "    table = np.array([(i / 255.0) ** inv_gamma * 255 for i in np.arange(256)]).astype(\"uint8\")\n",
+    "    return cv2.LUT(img, table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_underexposed(img, threshold=70):\n",
+    "    lab = cv2.cvtColor(img, cv2.COLOR_BGR2LAB)\n",
+    "    l_channel = lab[:, :, 0]\n",
+    "    mean_luminance = np.mean(l_channel)\n",
+    "    return mean_luminance < threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_blurry(img, threshold=100):\n",
+    "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "    laplacian_var = cv2.Laplacian(gray, cv2.CV_64F).var()\n",
+    "    return laplacian_var < threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def unsharp_mask(img):\n",
+    "    gaussian = cv2.GaussianBlur(img, (9, 9), 10.0)\n",
+    "    unsharp = cv2.addWeighted(img, 1.5, gaussian, -0.5, 0)\n",
+    "    return unsharp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_noisy(img, threshold=20):\n",
+    "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "    lap = cv2.Laplacian(gray, cv2.CV_64F)\n",
+    "    stddev = np.std(lap)\n",
+    "    return stddev > threshold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def denoise_image(img):\n",
+    "    return cv2.fastNlMeansDenoisingColored(img, None, 10, 20, 7, 35)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def smart_preprocess(img):\n",
+    "    print(\"Starting Smart Preprocessing...\")\n",
+    "\n",
+    "    if is_underexposed(img):\n",
+    "        print(\"Image is underexposed. Applying gamma correction.\")\n",
+    "        img = apply_gamma_correction(img, gamma=2.0)\n",
+    "    \n",
+    "    if is_blurry(img):\n",
+    "        print(\"Image is blurry. Applying unsharp masking.\")\n",
+    "        img = unsharp_mask(img)\n",
+    "    \n",
+    "    if is_noisy(img):\n",
+    "        print(\"Image is noisy. Applying denoising.\")\n",
+    "        img = denoise_image(img)\n",
+    "    \n",
+    "    return img"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
