Batch image processing

--- a/Batch_Image_Processing.ipynb
+++ b/Batch_Image_Processing.ipynb
@@ -10,7 +10,8 @@
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "from glob import glob"
+    "from glob import glob\n",
+    "import webbrowser"
    ]
   },
   {
@@ -210,9 +211,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import webbrowser\n",
-    "\n",
     "input_folder = r\"PATH/TO/FOLDER\"\n",
     "output_folder = r\"PATH/TO/FOLDER\"\n",
     "html_file = \"comparison_01.html\"\n",
@@ -334,10 +332,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import cv2\n",
-    "import numpy as np\n",
-    "\n",
     "input_folder = r\"PATH/TO/FOLDER\"\n",
     "output_folder = r\"PATH/TO/FOLDER\"\n",
     "\n",
@@ -438,9 +432,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import webbrowser\n",
-    "\n",
     "input_folder = r\"PATH/TO/FOLDER\"\n",
     "output_folder = r\"PATH/TO/FOLDER\"\n",
     "html_file = \"dull_images_comparison.html\"\n",
